bugs fixs & added sizes-int
